# fluvio-client-python

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  MANIFEST.in  Makefile  README.md  bors.toml  build.rs  pyproject.toml  requirements-publish.txt  requirements.txt  sample.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  cloud.yml  docs.yml  latest-dev-fluvio.yaml  publish.yml
cross/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.armv7-unknown-linux-gnueabihf
docs/: fluvio.html  index.html  search.js  search.json
docs/fluvio/: _fluvio_python.html  cloud.html
fluvio/: __init__.py  cloud.py  new_topic.py  record.py  specs.py  topic.py  utils.py
integration-tests/: test_base.py  test_consume.py  test_fluvio_python.py  test_produce.py  test_signals.py  test_signals_async.py
integration-tests/smartmodule-filter-on-a/: Cargo.toml  README.md  SmartModule.toml
integration-tests/smartmodule-filter-on-a/src/: lib.rs
integration-tests/smartmodules-for-ci/: fluvio_smartmodule_aggregate.wasm  fluvio_smartmodule_array_map_array.wasm  fluvio_smartmodule_filter_map.wasm  fluvio_smartmodule_filter_param.wasm  fluvio_smartmodule_map.wasm  smartmodule_filter_on_a.wasm
macos-ci-tests/: test_connect.py
manual-tests/: test_cloud_login.py
src/: consumer.rs  error.rs  glue.rs.in  lib.rs  produce_output.rs
src/cloud/: error.rs  http.rs  mod.rs
tests/: test_fluvio_python.py  test_new_topic.py  test_topic.py  test_utils.py
tools/: aarch64-linux-gnu-zig-c++  aarch64-linux-gnu-zig-cc  cibw_before_all_linux.sh  install_rust.sh
