[package]
name = "_fluvio_python"
version = "0.16.2"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]

[lib]
crate-type = ["cdylib"]
name = "_fluvio_python"

[build-dependencies]
env_logger = "^0.11"
log = "^0.4.17"

[dependencies]
anyhow = "1.0"
cc = "=1.0.83"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["testing", "attributes", "async-std-runtime"] }
thiserror = "1.0.21"
serde = "1.0.117"
tracing = "0.1.37"
url = "2.5.0"
dirs = "5.0.1"
http-types = "2.6.0"
tokio = { version = "1.36.0", default-features = false, features = ["macros"] }
async-h1 = "2.3.3"
async-std = "1.6.5"
serde_urlencoded = "0.7.1"
md-5 = "0.10.0"
hex = "0.4.2"
webbrowser = "1.0.0"
toml = "0.8.1"
serde_json = "1.0.59"
rpassword = "7.3.1"
futures = "0.3.30"
async-lock = "3.3.0"

fluvio-future = { version = "0.6.2", features = ["task", "io", "native2_tls", "subscriber"] }
fluvio = { features = ["admin", "rustls"], git = "https://github.com/infinyon/fluvio.git", tag = "v0.11.9" }
fluvio-types = { git = "https://github.com/infinyon/fluvio.git", tag = "v0.11.9" }
fluvio-sc-schema = { git = "https://github.com/infinyon/fluvio.git", tag = "v0.11.8" }
fluvio-controlplane-metadata = { git = "https://github.com/infinyon/fluvio.git", tag = "v0.11.8" }
